# openGL

./: CMakeLists.txt  README.md
Res/objects/Crate/: cottage.fbx  untitled.blend  untitled.blend1  untitled.mtl
Res/objects/bricks/: bricks.blend  bricks.mtl
Res/objects/computer/: computer.mtl
Res/objects/cottage/: cottage.fbx  cottage.mtl
Res/objects/floor/: floor.mtl  untitled.blend  untitled.blend1
Res/objects/huose/: Bambo_House.mtl
Res/textures/skybox/: orbital-element_dn.tga  orbital-element_up.tga
Shaders/: darkLight.fs
include/glad/: glad.h
include/learnopengl/: model.h  shader_s.h
src/: glad.c  main.cpp  model.cpp  world.cpp
